# centennialCollege_cloudML_MedicalDocumentRedaction

./: .gitignore
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
assets/output/: redacted-medical-report-sample-nigeria.pdf.metadata.json  redacted-medical-report-sample-nigeria_image.png.metadata.json
braistorming/: generalRequirements.md
deploy/: .gitignore  backend.env.example  docker-compose.yml
deploy/ec2/: setup.md
frontend/: config.js  index.html  script.js  style.css
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  config.py  main.py
server/app/api/: deps.py
server/app/api/routes/: jobs.py  process.py
server/app/models/: __init__.py  job.py  processing.py
server/app/services/: __init__.py  job_service.py  protocols.py  sync_redaction.py
server/app/services/detection/: __init__.py  comprehend.py  custom_rules.py  merge.py
server/app/services/extraction/: __init__.py  rekognition.py  service.py  textract.py  types.py
server/app/services/pipeline/: __init__.py  processor.py
server/app/services/redaction/: __init__.py  image.py  pdf.py  text.py
server/app/services/storage/: __init__.py  memory.py
server/tests/: __init__.py  test_api.py  test_merge.py  test_text_redaction.py
